force-app/main/default/objects/User/fields/Cod_Navision__c.field-meta.xml
<CustomField>
    <fullName>Cod_Navision__c</fullName>
    <description>Código de Navision del usuario</description>
    <inlineHelpText>Código de Navision del usuario</inlineHelpText>
    <label>Cod. Navision</label>
    <length>18</length>
    <type>Text</type>
</CustomField>