force-app/main/default/objects/User/fields/recordval__rv2DisableAutoValidate__c.field-meta.xml
<CustomField>
    <fullName>recordval__rv2DisableAutoValidate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable RV Direct Validate</label>
    <type>Checkbox</type>
</CustomField>