force-app/main/default/objects/User/fields/recordval__rv2DisableTriggers__c.field-meta.xml
<CustomField>
    <fullName>recordval__rv2DisableTriggers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable All Record Validation Triggers</label>
    <type>Checkbox</type>
</CustomField>