force-app/main/default/objects/User/fields/Zona__c.field-meta.xml
<CustomField>
    <fullName>Zona__c</fullName>
    <description>Ambito geogràfico del comercial</description>
    <label>Zona</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Este</fullName>
            </value>
            <value>
                <fullName>Noroeste</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>