force-app/main/default/objects/User/listViews/ActiveUsers.listView-meta.xml
<ListView>
    <fullName>ActiveUsers</fullName>
    <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND 6 AND 7</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <columns>CORE.USERS.SAML_SUBJECT</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CORE.USER_ROLE.NAME</field>
        <operation>notEqual</operation>
        <value>TELPER Socio usuario</value>
    </filters>
    <filters>
        <field>CORE.USER_ROLE.NAME</field>
        <operation>notEqual</operation>
        <value>MP GAS S.L. Socio Usuario</value>
    </filters>
    <filters>
        <field>CORE.USER_ROLE.NAME</field>
        <operation>notEqual</operation>
        <value>MAPEGAS S.L. Socio Usuario</value>
    </filters>
    <filters>
        <field>CORE.USER_ROLE.NAME</field>
        <operation>notEqual</operation>
        <value>Itac Hispania SA Socio Usuario</value>
    </filters>
    <filters>
        <field>CORE.USER_ROLE.NAME</field>
        <operation>notEqual</operation>
        <value>ABINITIO CONSULTING S.L. Socio Usuario</value>
    </filters>
    <filters>
        <field>CORE.USER_ROLE.NAME</field>
        <operation>notEqual</operation>
        <value>ABINITIO Canalizados Socio Usuario</value>
    </filters>
    <label>Usuarios activos Primagas</label>
    <language>es</language>
</ListView>