force-app/main/default/objects/User/listViews/Usuarios_Activos_Telper.listView-meta.xml
<ListView>
    <fullName>Usuarios_Activos_Telper</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USER_ROLE.NAME</field>
        <operation>contains</operation>
        <value>telper</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Usuarios Activos Telper</label>
    <language>es</language>
    <sharedTo>
        <group>Atenci_n_al_cliente</group>
    </sharedTo>
</ListView>